# knetvis

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  ROADMAP.md  ci-check.sh  demo-r.cast  demo.cast  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test-policy.yaml  touch.ini
.github/workflows/: ci.yml  publish.yml
docs/: api.md  faq.md  installation.md
docs/tutorials/: getting-started.md
examples/: basic-policy.yaml  complete-policy.yaml  deny-all.yaml  frontend-backend-policy.yaml  multi-namespace.yaml  services.yaml  test-pods.yaml
src/: main.py  policy.py  simulator.py  visualizer.py
src/knetvis/: __init__.py  cli.py  models.py  policy.py  simulator.py  visualizer.py
tests/: conftest.py  test_cli.py  test_policy.py  test_simulator.py  test_visualizer.py
