[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knetvis"
version = "0.1.0"
description = "A CLI tool for network visualization"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Samuel Arogbonlo", email = "sbayo971@gmail.com" },
]
dependencies = [
    "kubernetes>=28.1.0",
    "networkx>=3.1",
    "matplotlib>=3.7.1",
    "click>=8.1.3",
    "rich>=13.3.5",
    "pyyaml>=6.0.1",
]

[project.scripts]
knetvis = "knetvis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "pre-commit>=2.20.0",
    "tox>=3.24.0",
    "mypy>=0.982",
]